src/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blazorpong
  labels:
    app.kubernetes.io/part-of: blazorpong
