src/infra/k8s/signalr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalr
  namespace: blazorpong
  labels:
    app.kubernetes.io/name: signalr
    app.kubernetes.io/part-of: blazorpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: signalr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: signalr
        app.kubernetes.io/part-of: blazorpong
    spec:
      containers:
        - name: signalr
          image: ghcr.io/macel94/cloudnativeblazorpong/blazorpong-signalr:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: signalr
  namespace: blazorpong
  labels:
    app.kubernetes.io/name: signalr
    app.kubernetes.io/part-of: blazorpong
spec:
  selector:
    app.kubernetes.io/name: signalr
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
