src/infra/k8s/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: blazorpong
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: blazorpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webapp
        app.kubernetes.io/part-of: blazorpong
    spec:
      containers:
        - name: webapp
          image: ghcr.io/macel94/cloudnativeblazorpong/blazorpong-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: blazorpong
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: blazorpong
spec:
  selector:
    app.kubernetes.io/name: webapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
